<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_introduction"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray_white"
    >


    <android.support.v7.widget.Toolbar
        android:id="@+id/index_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        style="@style/ToolBarStyle"
        >

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/string_bind_title"
            android:textColor="@color/white"
            android:textSize="@dimen/small_middle_text_size" />
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_marginTop="@dimen/app_margin_left"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="@dimen/app_margin_top"
            >
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="@dimen/small_text_size"
             android:textColor="@color/design_text_gray"
             android:text="@string/string_bind_car_info_first"
             />
            <ImageView
                android:layout_marginTop="@dimen/app_margin_top"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_bindcar_info_img1"
                />
            <TextView
                android:layout_marginTop="@dimen/app_margin_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/design_text_black"
                android:textSize="@dimen/small_middle_text_size"
                android:text="@string/string_nopwd_pay_title_with_number"
                />

            <TextView
                android:layout_marginTop="@dimen/app_margin_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/small_text_size"
                android:textColor="@color/design_text_gray"
                android:text="@string/string_bind_car_info_second"
                />

            <ImageView
                android:layout_marginTop="@dimen/app_margin_top"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_no_pwd_pay"
                />

            <TextView
                android:layout_marginTop="@dimen/app_margin_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/design_text_black"
                android:textSize="@dimen/small_middle_text_size"
                android:text="@string/string_car_certification_title_with_number"
                />

            <TextView
                android:layout_marginTop="@dimen/app_margin_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/small_text_size"
                android:textColor="@color/design_text_gray"
                android:text="@string/string_bind_car_info_third"
                />

            <ImageView
                android:layout_marginTop="@dimen/app_margin_top"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_bindcar_info_img2"
                />

        </LinearLayout>

    </ScrollView>
</LinearLayout>
