<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/thirdLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/alpha_dark_black"

    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_marginTop="@dimen/app_margin_top"
        android:layout_marginLeft="@dimen/app_margin_left"
        android:layout_marginRight="@dimen/app_margin_left"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <ImageView
            android:adjustViewBounds="true"
            android:layout_marginTop="@dimen/app_margin_top"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:src="@drawable/icon_license_defult"
            android:scaleType="fitXY"
            />

        <TextView
            android:layout_marginTop="@dimen/app_margin_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notify_certification_first"
            android:textColor="@color/white"
            android:textSize="@dimen/small_text_size"
            />


        <TextView
            android:layout_marginTop="@dimen/app_margin_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notify_certification_second"
            android:textColor="@color/white"
            android:textSize="@dimen/small_text_size"
            />
        <Button
            android:layout_marginTop="@dimen/margin_70dp"
            android:layout_marginLeft="@dimen/app_margin_left"
            android:layout_marginRight="@dimen/app_margin_left"
            android:id="@+id/bt_i_know"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_add"
            android:text="@string/iknow"
            android:textColor="@color/white"
            android:textSize="@dimen/small_middle_text_size" />


    </LinearLayout>


    </ScrollView>

</RelativeLayout>
